# daxa-template

./: CMakeLists.txt  main.cpp  vcpkg-configuration.json  vcpkg.json  window.hpp
shaders/: compute.hlsl  shared.inl
